--- a/CreatorTests/Views/ApprovalSheetPage.xaml
+++ b/CreatorTests/Views/ApprovalSheetPage.xaml
@@ -93,6 +93,6 @@
             <TextBox Grid.Column="2" Grid.Row="3" Text="{Binding DevelopedSignature}"/>
         </Grid>
 
-        <Button Grid.Row="3" Content="Продолжить заполнение" VerticalAlignment="Bottom"/>
+        <Button Grid.Row="3" Content="Продолжить заполнение" VerticalAlignment="Bottom" Command="{Binding PushNextPageCommand}"/>
     </Grid>
 </Page>
