--- a/CreatorTests/Views/DisciplineInformationPage.xaml
+++ b/CreatorTests/Views/DisciplineInformationPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:viewModels="clr-namespace:CreatorTests.ViewModels"
+      xmlns:models="clr-namespace:CreatorTests.Models"
       xmlns:local="clr-namespace:CreatorTests.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -61,14 +62,14 @@
                 <TextBlock Grid.Column="0" Grid.Row="3" Text="Компетенции" />
                 <TextBlock Grid.Column="0" Grid.Row="4" Text="Индикаторы достижения компетенции" />
 
-                <ComboBox Grid.Column="1" Grid.Row="0" SelectedItem="{Binding SelectedDirectionName}" />
-                <ComboBox Grid.Column="1" Grid.Row="1" SelectedItem="{Binding SelectedGroupNumber}" />
-                <ComboBox Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedDisciplineName}" />
-                <ComboBox Grid.Column="1" Grid.Row="3" SelectedItem="{Binding SelectedCompetencies}" />
+                <ComboBox Grid.Column="1" Grid.Row="0" SelectedItem="{Binding SelectedDirectionName}" ItemsSource="{Binding Source={x:Static models:AppConstants.DirectionNameList}}" />
+                <ComboBox Grid.Column="1" Grid.Row="1" SelectedItem="{Binding SelectedGroupNumber}" ItemsSource="{Binding Source={x:Static models:AppConstants.GroupNumberList}}"/>
+                <ComboBox Grid.Column="1" Grid.Row="2" SelectedItem="{Binding SelectedDisciplineName}" ItemsSource="{Binding Source={x:Static models:AppConstants.DisciplineNameList}}"/>
+                <ComboBox Grid.Column="1" Grid.Row="3" SelectedItem="{Binding SelectedCompetencies}" ItemsSource="{Binding Source={x:Static models:AppConstants.CompetenciesList}}"/>
                 <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding IndicatorsСompetenceAchievement}" />
             </Grid>
         </ScrollViewer>
 
-        <Button Grid.Row="2" Content="Продолжить заполнение" VerticalAlignment="Bottom" Command="{Binding WriteInDocumentCommand}"/>
+        <Button Grid.Row="2" Content="Продолжить заполнение" VerticalAlignment="Bottom" Command="{Binding PushNextPageCommand}"/>
     </Grid>
 </Page>
